--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-        <title>MY RESUME</title></title>
+        <title>MY RESUME</title>
         <meta name="description" content="A brief description about me">
         <meta name="author" content="CHENNAKESHAVA REDDY">
     
@@ -18,7 +18,7 @@
     </head>
     <body>
         <nav>
-            <a herf="education.html">Education.html</a>
+            <a herf="education.html">Education</a>
             <a herf="contact.html">Contact</a>
             <a herf="Skills.html">skills</a>
         </nav>
@@ -29,7 +29,7 @@
         <main>
             <img src="keshav.jpg">
             <p>About me</p>
-            <p>I am currently pursuing a degree in Electronics and Computer Engineering. As a curious and creative learner, I am highly interested in coding, web development, and data analytics. My passion for electronics drives my enthusiasm for this field.</p>
+            <p>I am currently pursuing a degree in Electronics and Computer Engineering. As a curious and creative learner, I am highly interested in coding, web development, and data analytics. My passion for electronics drives my enthusiasm for this field</p>
         </main>
         <footer>
             <p>Devloped and mainted by A chennakesahava Reddy.all rightd reserved</p>
