--- a/info.html
+++ b/info.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,23 +16,26 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;500;600&display=swap" rel="stylesheet">
     </head>
-    <body>
-        <nav>
-            <a herf="education.html">Education</a>
-            <a herf="contact.html">Contact</a>
-            <a herf="Skills.html">skills</a>
-        </nav>
-        <header>
-            <p>A.Chennakeshava Reddy</p>
-            <img src="sunny.jpg">
-        </header>
-        <main>
-            <img src="keshav.jpg">
-            <p>About me</p>
-            <p>I am currently pursuing a degree in Electronics and Computer Engineering. As a curious and creative learner, I am highly interested in coding, web development, and data analytics. My passion for electronics drives my enthusiasm for this field</p>
-        </main>
-        <footer>
-            <p>Devloped and mainted by A chennakesahava Reddy.all rightd reserved</p>
-        </footer>
-    </body>
+    <main>
+       <body>
+         <nav>
+              <a herf="education.html">Education</a>
+              <a herf="contact.html">Contact</a>
+             <a herf="Skills.html">skills</a>
+         </nav>
+         <header>
+              <p>A.Chennakeshava Reddy</p>
+              <img src="sunny.jpg">
+         </header>
+         <article>
+             <img src="keshav.jpg">
+             <p>About me</p>
+             <p>I am currently pursuing a degree in Electronics and Computer Engineering. As a curious and creative learner, I am highly interested in coding, web development, and data analytics. My passion for electronics drives my enthusiasm for this field</p>
+         </article>>
+         <footer>
+             <p>Devloped and mainted by A chennakesahava Reddy.all rightd reserved</p>
+         </footer>
+      </body>
+        
+    </main>
 </html>
