--- a/info.html
+++ b/info.html
@@ -16,26 +16,36 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;500;600&display=swap" rel="stylesheet">
     </head>
-    <main>
-       <body>
-         <nav>
-              <a herf="education.html">Education</a>
-              <a herf="contact.html">Contact</a>
-             <a herf="Skills.html">skills</a>
-         </nav>
-         <header>
-              <p>A.Chennakeshava Reddy</p>
-              <img src="sunny.jpg">
-         </header>
-         <article>
-             <img src="keshav.jpg">
-             <p>About me</p>
-             <p>I am currently pursuing a degree in Electronics and Computer Engineering. As a curious and creative learner, I am highly interested in coding, web development, and data analytics. My passion for electronics drives my enthusiasm for this field</p>
-         </article>>
-         <footer>
-             <p>Devloped and mainted by A chennakesahava Reddy.all rightd reserved</p>
-         </footer>
-      </body>
-        
-    </main>
+    <body>
+        <header>
+            <p>A chennakeshava reddy</p>
+            <img src="./sunny.jpg">
+        </header>
+        <nav>
+            <a herf="education.html">Education</a>
+            <a herf="skills.html">Skills</a>
+            <a herf="Contact.html">contact</a>
+        </nav>
+        <main>
+            <div id="about me">
+                <p>ABOUT ME</p>
+                <p>I am currently pursuing a degree in Electronics and Computer Engineering. As a curious and creative learner, I am highly interested in coding, web development, and data analytics. My passion for electronics drives my enthusiasm for this field</p>
+            </div>
+            <div id="contacts">
+                <a href="https://api.whatsapp.com/qr/DEHZ6DZQMU3BO1">
+                    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2F6%2F6b%2FWhatsApp.svg%2F1200px-WhatsApp.svg.png&tbnid=AqL1RlnhoDwPOM&vet=12ahUKEwiLv7zYgdSAAxU3zaACHYj4C6QQMygAegUIARDuAQ..i&imgrefurl=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FWhatsApp&docid=RjTzvvVwSvYLDM&w=1200&h=1207&q=whatsapp&ved=2ahUKEwiLv7zYgdSAAxU3zaACHYj4C6QQMygAegUIARDuAQ" style="width:42px;height:42px;">
+                </a>
+                <a herf="https://www.instagram.com/achennakeshava_reddy/">
+                    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fimg.freepik.com%2Fpremium-vector%2Fpurple-gradiend-social-media-logo_197792-1883.jpg%3Fw%3D2000&tbnid=K_ffAkIeAli1sM&vet=12ahUKEwjsoIaKhdSAAxUsmmMGHcp7BnAQMygAegUIARDzAQ..i&imgrefurl=https%3A%2F%2Fwww.freepik.com%2Ffree-photos-vectors%2Finstagram-logo&docid=LdG28-Bs0ryo8M&w=2000&h=2000&itg=1&q=instagram%20logo&ved=2ahUKEwjsoIaKhdSAAxUsmmMGHcp7BnAQMygAegUIARDzAQ"style="width:42px;height:42px;">
+                </a>
+                <a herf="https://www.linkedin.com/in/ayyaluri-chennakeshavareddy-b9416a252/">
+                    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2Fc%2Fca%2FLinkedIn_logo_initials.png%2F800px-LinkedIn_logo_initials.png&tbnid=m07o67zmNHn6OM&vet=12ahUKEwj-jPS6hdSAAxXM6DgGHUb1CpEQMygAegUIARDxAQ..i&imgrefurl=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3ALinkedIn_logo_initials.png&docid=YvoKnije3nifwM&w=800&h=800&q=linkedin%20logo&ved=2ahUKEwj-jPS6hdSAAxXM6DgGHUb1CpEQMygAegUIARDxAQ"style="width:42px;height:42px;">
+                </a>
+            </div>
+        </main>
+        <footer>
+            <p>Devloped and mainted by A chennakesahava Reddy.all rightd reserved</p>
+        </footer>        
+    </body>
+
 </html>
