--- a/info.html
+++ b/info.html
@@ -22,12 +22,14 @@
             <img src="./sunny.jpg">
         </header>
         <nav>
+            <a herf="info.html">info</a>
             <a herf="education.html">Education</a>
             <a herf="skills.html">Skills</a>
             <a herf="Contact.html">contact</a>
         </nav>
         <main>
             <div id="about me">
+                <img src="./keshav.jpg">
                 <p>ABOUT ME</p>
                 <p>I am currently pursuing a degree in Electronics and Computer Engineering. As a curious and creative learner, I am highly interested in coding, web development, and data analytics. My passion for electronics drives my enthusiasm for this field</p>
             </div>
@@ -44,7 +46,7 @@
             </div>
         </main>
         <footer>
-            <p>Devloped and mainted by A chennakesahava Reddy.all rightd reserved</p>
+            <p>Devloped and mainted by A chennakesahava Reddy.all rights reserved</p>
         </footer>        
     </body>
 
